--- a/style.css
+++ b/style.css
@@ -1,25 +1,47 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 header{
     background-color: rgba(28, 99, 28, 0.581);
     text-align: center;
     margin: auto;
+    margin-top: 30px;
     padding: 12px;
-    margin-bottom:20px ;
     width: 600px;
+    margin-bottom: 7px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.4);
+    color: white;
+    
 }
 form{
     background-color:rgba(28, 99, 28, 0.581) ;
     margin: auto;
     width: 600px;
     padding: 12px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.4);
+    border-radius:  0px  0px 6px 6px ;
+    
+}
+form > input{
+    padding: 5px;
+    margin: 2px;
+}
+form > button{
+    padding: 3px;
+    border-radius: 5px;
+    border-style: none;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
+    color: rgba(12, 93, 12, 0.819);
+    margin: 2px;
 }
 table{
     width: 600px;
     margin: auto;
-    padding: 20px;
+    padding: 12px;
+    
 }
-f
+
+
 
